Updated math camp slides

--- a/math_camp_limits_derivatives_day_1_slides.tex
+++ b/math_camp_limits_derivatives_day_1_slides.tex
@@ -110,6 +110,24 @@ Michael Karas, PhD Candidate at CU Boulder
 %------------------------------------------------------------------------------
 
 %------------------------------------------------------------------------------
+\begin{frame}{Functions}\label{main1}
+	A function is a rule which assigns a number in $R^1$ to each number in $R^1$
+\begin{itemize}
+\begin{itemize}
+	\item $R^1$ is the set of all real numbers
+	\item ex. $f(x) = 2x$ assigns $x = 2$ to $f(2) = 2(2) = 4$
+	\item The domain of a function is the set of all possible input values
+	\item The input variable $x$ is called the independent variable or exogenous variable
+	\item The output variable $y$ is called the dependent variable or endogenous variable
+	\item Linear vs nonlinear functions
+	\item Functions can be of multiple input variables, $f(x,z) = 2xz^{2}$
+\end{itemize}
+\end{itemize}
+
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
 \begin{frame}{Limits}\label{main1}
 	The limit of \( f(x) \) as \( x \) approaches \( a \) is written as:
 \[
@@ -312,7 +330,7 @@ Let \(f(x)\) and \(g(x)\) be differentiable functions:
 \begin{frame}{Derivative Practice Problems}\label{main1}
 	\vspace{-4cm}
     \[
-    f(x) = 9x^{10}
+    f(x) = x^{\frac{1}{2}}
     \]
 \end{frame}
 %------------------------------------------------------------------------------
@@ -328,9 +346,9 @@ Let \(f(x)\) and \(g(x)\) be differentiable functions:
 
 %------------------------------------------------------------------------------
 \begin{frame}{Derivative Practice Problems}\label{main1}
-	\vspace{-4cm}
+    \vspace{-4cm}
     \[
-    f(x) = \sqrt{x} * 6x^{4}
+    f(x) = (x^2 + 1)(\sqrt{x})
     \]
 \end{frame}
 %------------------------------------------------------------------------------
@@ -368,6 +386,86 @@ Let $a$ and $b$ be real numbers and $m$ and $n$ be integers. Then the following 
     \item $a^0 = 1$, $a \neq 0$
     \item $a^{\frac{m}{n}} = \sqrt[n]{a^m} = \left(\sqrt[n]{a}\right)^m$
 \end{itemize}
+\end{itemize}
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Exponent Rules: Product and Power of a Power}\label{example1}
+\vspace{-1cm}
+\begin{itemize}
+    \item \textbf{Product Rule:} $a^m a^n = a^{m+n}$
+    \[
+    2^3 \cdot 2^4 = 2^{3+4} = 2^7 = 128
+    \]
+
+    \item \textbf{Power of a Power Rule:} $(a^m)^n = a^{mn}$
+    \[
+    (3^2)^3 = 3^{2 \cdot 3} = 3^6 = 729
+    \]
+\end{itemize}
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Exponent Rules: Distributing Powers and Quotients}\label{example2}
+\vspace{-1cm}
+\begin{itemize}
+    \item \textbf{Power of a Product:} $ a^m b^m = (ab)^m$
+    \[
+    2^3 \cdot 5^3 = (2 \cdot 5)^3 = (10)^3 = 1000
+    \]
+
+    \item \textbf{Quotient Rule:} $\frac{a^m}{a^n} = a^{m-n}, \, a \ne 0$
+    \[
+    \frac{7^5}{7^2} = 7^{5-2} = 7^3 = 343
+    \]
+\end{itemize}
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Exponent Rules: Power of a Quotient and Negative Exponents}\label{example3}
+\vspace{-1cm}
+\begin{itemize}
+    \item \textbf{Power of a Quotient:} $\left(\frac{a}{b}\right)^m = \frac{a^m}{b^m}, \, b \ne 0$
+    \[
+    \left(\frac{3}{2}\right)^2 = \frac{3^2}{2^2} = \frac{9}{4}
+    \]
+
+    \item \textbf{Negative Exponent:} $a^{-m} = \frac{1}{a^m}, \, a \ne 0$
+    \[
+    5^{-3} = \frac{1}{5^3} = \frac{1}{125}
+    \]
+\end{itemize}
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Exponent Rules: Rational and Zero Exponents}\label{example4}
+\vspace{-1cm}
+\begin{itemize}
+    \item \textbf{Fractional Exponent:} $a^{\frac{1}{n}} = \sqrt[n]{a}$
+    \[
+    16^{1/2} = \sqrt{16} = 4
+    \]
+
+    \item \textbf{Zero Exponent:} $a^0 = 1, \, a \ne 0$
+    \[
+    12^0 = 1
+    \]
+\end{itemize}
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Exponent Rule: General Rational Exponents}\label{example5}
+\vspace{-1cm}
+\begin{itemize}
+    \item \textbf{General Rule:} $a^{\frac{m}{n}} = \sqrt[n]{a^m} = \left(\sqrt[n]{a}\right)^m$
+    \[
+    8^{2/3} = \sqrt[3]{8^2} = \sqrt[3]{64} = 4
+    \]
 \end{itemize}
 \end{frame}
 %------------------------------------------------------------------------------
@@ -471,6 +569,24 @@ We could keep differentiating as long as the last derivative is differentiable. 
     \item $y''$ (sometimes)
 \end{itemize}
 \end{itemize}
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Higher Order Derivatives Practice Problem}\label{main1}
+	\vspace{-4cm}
+    \[
+    f(x) = 2x^{3}
+    \]
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Higher Order Derivatives Practice Problem}\label{main1}
+	\vspace{-4cm}
+    \[
+    f(x) = x^{\frac{5}{2}}
+    \]
 \end{frame}
 %------------------------------------------------------------------------------
 
