--- a/math_camp_limits_derivatives_day_2_slides.tex
+++ b/math_camp_limits_derivatives_day_2_slides.tex
@@ -66,7 +66,7 @@
 \begin{frame}{Day 1 Practice Problems}\label{main1}
 	\vspace{-4cm}
     \[
-    f(x) = x(x^{2} + 1)
+    f(x) = x^{\frac{1}{4}}
     \]
     Find \( f'(x) \) and \( f''(x) \)
 \end{frame}
@@ -79,13 +79,6 @@
     f(x) = ln(x^{2} + 1)
     \]
     Find \( f'(x) \) and \( f''(x) \)
-\end{frame}
-%------------------------------------------------------------------------------
-
-%------------------------------------------------------------------------------
-\begin{frame}{Day 1 Practice Problems}\label{main1}
-	\vspace{-4cm}
-    Prove that \( \frac{d}{dx}e^{x} = e^{x} \)
 \end{frame}
 %------------------------------------------------------------------------------
 
@@ -132,6 +125,16 @@
 %------------------------------------------------------------------------------
 
 %------------------------------------------------------------------------------
+\begin{frame}{Increasing/Decreasing Functions Practice Problems}\label{main2}
+    \vspace{-4cm}
+    \[
+    f(x) = x^3 - 3x
+    \]
+    Find the intervals where \( f(x) \) is increasing and where it is decreasing.
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
 \begin{frame}{Concave/Convex Functions}\label{main1}
     Often it is not enough to know if a function is increasing/decreasing. We need to know its shape. Let $f$ and $I$ be as before. Then,
     \begin{itemize}
@@ -140,7 +143,7 @@
     \end{itemize}
     Convex: function is increasing at an increasing rate to the bottom of a “valley.” Concave: function is increasing at a decreasing rate to the peak of a “mountain.”
     \begin{itemize}
-        \item If $f''(x) = 0$, $f$ is at an inflection point – the acceleration switches (e.g. skiing)
+        \item If $f''(x) = 0$, $f$ is at an inflection point
     \end{itemize}
 \end{frame}
 %------------------------------------------------------------------------------
@@ -164,18 +167,27 @@
 %------------------------------------------------------------------------------
 
 %------------------------------------------------------------------------------
+\begin{frame}{Concave/Convex Functions Practice Problems}\label{main2}
+    \vspace{-4cm}
+    \[
+    f(x) = x^2 + 3x + 2
+    \]
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
 \begin{frame}{Critical Points}\label{main1}
     One of the major uses of calculus is to find and characterize the maxima and minima of functions (such as maximizing utility and profit or minimizing costs)
     \begin{itemize}
     \item Maxima
     \begin{itemize}
         \item Local maximum at $x_0$ if $f(x) \leq f(x_0)$ for all $x$ in some open interval containing $x_0$ 
-        \item Global if $f(x) \leq F(x_0)$ for all $x$ for the domain of $x_0$ 
+        \item Global if $f(x) \leq f(x_0)$ for all $x$ for the domain of $x_0$ 
     \end{itemize}
     \item Minima
    \begin{itemize}
         \item Local maximum at $x_0$ if $f(x) \geq f(x_0)$ for all $x$ in some open interval containing $x_0$ 
-        \item Global if $f(x) \geq F(x_0)$ for all $x$ for the domain of $x_0$ 
+        \item Global if $f(x) \geq f(x_0)$ for all $x$ for the domain of $x_0$ 
     \end{itemize}
     \end{itemize}
 \end{frame}
@@ -198,6 +210,15 @@
 	\vspace{-4cm}
      \[
     f(x) = x^4 - 4x^3 + 4x^2 + 4
+    \]
+\end{frame}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Critical Points Example}\label{main2}
+    \vspace{-4cm}
+    \[
+    f(x) = x^3 - 3x
     \]
 \end{frame}
 %------------------------------------------------------------------------------
@@ -327,6 +348,16 @@
     \]
 \end{frame}
 %------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\begin{frame}{Partial Derivatives Practice Problems}\label{main2}
+    \vspace{-4cm}
+    \[
+    f(x,y) = xy + x^2y + xy^3
+    \]
+\end{frame}
+%------------------------------------------------------------------------------
+
 
 %------------------------------------------------------------------------------
 \begin{frame}{Partial Derivatives Practice Problems}\label{main1}
