Updated Problem Set

--- a/math_camp_limits_derivatives_problem_set.tex
+++ b/math_camp_limits_derivatives_problem_set.tex
@@ -61,26 +61,31 @@
 
 \begin{enumerate} 
 
-\item[7.] Consider \( f(x) = -x^3 + 2x^2 - x - 6 \) is increasing/decreasing.
+\item[7.] Consider \( f(x) = -x^3 + 2x^2 - x - 6 \)
 
 \begin{itemize}
-    \item[(a)] Examine where \( f(x) \) is increasing/decreasing.
-    \item[(b)] Examine where \( f(x) \) is concave/convex.
+    \item[(a)] Find over what intervals \( f(x) \) is increasing and decreasing.
+    \item[(b)] Find over what intervals \( f(x) \) is concave and convex.
+    \item[(c)] Find the minima and maxima of \( f(x) \).
+\end{itemize}
+
+\item[8.] Consider \( f(x) = x^3 - 3x^2 - 9x + 5 \)
+
+\begin{itemize}
+    \item[(a)] Find over what intervals \( f(x) \) is increasing and decreasing.
+    \item[(b)] Find over what intervals \( f(x) \) is concave and convex.
+    \item[(c)] Find the minima and maxima of \( f(x) \).
 \end{itemize}
    
-\item[8.] Find \( y' \) by implicit differentiation of \( x^2 + xy - y^3 = 0 \).
-
-\item[9.] Find \( \frac{\partial f(x_1, x_2)}{\partial x_1} \), \( \frac{\partial f(x_1, x_2)}{\partial x_2} \), and \( \frac{\partial^2 f(x_1, x_2)}{\partial x_1 \partial x_2} \) for the following.
+\item[9.] Find \( \frac{\partial f(x, y)}{\partial x} \), \( \frac{\partial f(x, y)}{\partial y} \), and \( \frac{\partial^2 f(x, y)}{\partial x \partial y} \) for the following.
 
 \begin{itemize}
-    \item[(a)] \( f(x_1, x_2) = x_1^2 x_2 + \ln(x_1) x_2^3 \)
-    \item[(b)] \( f(x_1, x_2) = e^{(\sqrt{x_1})} \ln(x_2) + \frac{x_1}{x_2} \)
-    \item[(c)] \( f(x_1, x_2) = Ax_1^{\alpha}x_2^{\beta} \) with \( 0 < \alpha < 1 \), \( 0 < \beta < 1 \), \& \( A > 0 \)
+	\item[(a)] \( f(x, y) = 3x^2 + 2y \)
+    \item[(a)] \( f(x, y) = e^x + y^3 \)
+    \item[(b)] \( f(x, y) = x^{3/2}y^{1/2} + x^{1/2} \)
+    \item[(c)] \( f(x, y) = \ln(x + y) \)
 \end{itemize}
 
-\item[10.] If \( f \) is differentiable at \( x \), find the expression for the derivative of \\\ \( x^2 f(x) + [f(x)]^3 \).
-
-\item[11.] Find the Taylor Series Expansion of order \( k = 4 \) for \(f(x) = e^{-6x} \) about \( x = -4 \)
 
 \end{enumerate}
 
